# livekit-plugins-mistral

./: AGENT_MODE_IMPLEMENTATION.md  README.md  example_agent_usage.py  pyproject.toml  requirements.txt
livekit/plugins/mistral/: __init__.py  llm.py  log.py  models.py  py.typed  version.py
