[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-mistral"
dynamic = ["version"]
description = "Mistral LLM plugin for LiveKit agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.0"
authors = [
    {name = "Matthieu FRONTON", email = "m@tthieu.fr"}
]
keywords = ["webrtc", "realtime", "audio", "livekit", "Mistral", "LLM"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "livekit-agents>=1.0.22", # Ensure this matches the version you are working with
    "mistralai>=1.8.0"     # Replace with the actual latest version of the official Mistral client
]

[project.urls]
Source = "https://github.com/frntn/livekit-plugins-mistral"

[tool.hatch.version]
path = "livekit/plugins/mistral/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
